# robot

./: .gitignore  README.md
fastlio2_ws/: .gitignore  README.md  run_avia_test.sh  run_avia_tuned_live.sh  run_fastlio_remaining.sh  run_mid360_test.sh  run_school_map.sh
fastlio2_ws/src/FAST_LIO/config/: avia.yaml  horizon.yaml  marsim.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
fastlio2_ws/src/FAST_LIO/config.before_detailed_chinese_comments/: avia.yaml
fastlio2_ws/src/FAST_LIO/launch/: mapping_avia_easy.launch  mapping_avia_school_save.launch  mapping_avia_tuned_accumulate.launch  mapping_avia_tuned_live.launch  view_fastlio2_pcd.launch
fastlio2_ws/src/FAST_LIO/rviz_cfg/: fastlio2_easy_view.rviz  fastlio2_live.rviz  fastlio2_live_accumulate.rviz  fastlio2_live_no_decay.rviz  fastlio2_map_only.rviz
fastlio2_ws/src/FAST_LIO/scripts/: thin_cloud.py  thin_live_cloud.py
race_ros2_ws/log/: latest_build
race_ros2_ws/src/race_bringup/: CMakeLists.txt  package.xml
race_ros2_ws/src/race_description/: CMakeLists.txt  package.xml
race_ros2_ws/src/race_gazebo/: CMakeLists.txt  package.xml
week00_catkin_ws/: README.md
week00_catkin_ws/src/factory_car_sim/: CMakeLists.txt  package.xml
week00_catkin_ws/src/factory_car_sim/launch/: keyboard_control.launch  load_factory.launch  three_car_follow.launch  three_car_sensors_rviz.launch
week00_catkin_ws/src/factory_car_sim/rviz/: three_car_sensors.rviz
week00_catkin_ws/src/factory_car_sim/scripts/: cmd_vel_follower.py  model_tf_broadcaster.py  tf_chain_follower.py  wasd_teleop.py
week00_catkin_ws/src/factory_car_sim/src/: move_car.cpp
week00_catkin_ws/src/factory_car_sim/urdf/: car.xacro
week01_gmapping_nav/: README.md
week01_mapping_ws/: README.md
week01_mapping_ws/src/week01_nav/: CMakeLists.txt  package.xml
week01_mapping_ws/src/week01_nav/config/: amcl.yaml  base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
week01_mapping_ws/src/week01_nav/launch/: gmapping_bringup.launch  mapping_full_stack.launch  nav_bringup.launch  warehouse_with_tb3.launch
week01_mapping_ws/src/week01_nav/maps/: aws_warehouse_map.pgm  (+1 more)
(+3 files in other folders)
